make the geotagger demo UI a little nicer; also, fixed a NameError on 'type': 'place'

--- a/obdemo/obdemo/templates/geotagger/geotagger.html
+++ b/obdemo/obdemo/templates/geotagger/geotagger.html
@@ -137,8 +137,8 @@
     <div id="detailmap"></div>
 
     <h2>Raw Result</h2>
-    <textarea id="raw_result" rows="10" cols="50">
-    </textarea>
+    <pre id="raw_result" style="background-color: #DDD">
+    </pre>
 </div>
 
 
