--- a/obdemo/obdemo/templates/homepage.html
+++ b/obdemo/obdemo/templates/homepage.html
@@ -33,51 +33,6 @@
 		</div><!--/ #intro-explore-->
 	</div><!--/ #intro -->
 
-    {% comment %}
-	{% if featured_neighborhood %}
-	<div id="featured-neighborhood">
-		<h2>Featured neighborhood</h2>
-		<h3><a href="{{ featured_neighborhood.url }}">{{ featured_neighborhood.name }}</a></h3>
-		<div id="fn-recentarticles">
-		  <h4>Recent articles in {{ featured_neighborhood.name }}</h4>
-			{% if featured_neighborhood_articles %} 
-				<ul class="newsitemlist">
-					{% for article in featured_neighborhood_articles %}
-					<li class="newsitem">
-						<strong class="title"><a href="{{ article.item_url }}" class="url">{{ article.title }}</a></strong>
-						<span class="location">{{ article.location_name }}</span>
-						<blockquote class="excerpt"><p>{{ article.attribute_values.excerpt }}</p></blockquote>
-						<p class="info"><strong class="date">{{ article.item_date|date:"F j" }}</strong> {{ article.attribute_values.source.name }}</p>
-					</li>
-					{% endfor %}
-				</ul>
-				<p><strong>{{ featured_neighborhood_article_count|intcomma }}</strong> <a href="/news-articles{{ featured_neighborhood.url }}">more article{{ featured_neighborhood_article_count|pluralize }} in {{ featured_neighborhood.name }}</a> in the last {{ num_days }} days.</p>
-			{% else %} 
-				<p><a href="/news-articles{{ featured_neighborhood.url }}">View articles in {{ featured_neighborhood.name }}…</a></p> 
-			{% endif %}
-		</div><!--/ .pane#fn-recentarticles -->
-		<div id="fn-publicrecords">
-		  <h4>Public records in {{ featured_neighborhood.name }}</h4>
-			{% if fn_non_empty_date_charts %}
-			<p>New in the last {{ num_days }} days</p>
-			{% for chart_bunch in fn_non_empty_date_charts|bunchlong:"2" %}
-			<ul>
-				{% for chart in chart_bunch %}
-				<li>
-					<strong>{{ chart.total_count|intcomma }}</strong> <a href="{{ chart.schema.url }}locations/neighborhoods/{{ featured_neighborhood.slug }}/">{% filter capfirst %}{% schema_plural_name chart.schema chart.total_count %}{% endfilter %}</a>
-				</li>
-				{% endfor %}
-			</ul>
-			{% endfor %}
-			{% endif %}
-			{% if fn_empty_date_charts %}
-			<p>More: {% for chart in fn_empty_date_charts %}<a href="{{ chart.schema.url }}locations/neighborhoods/{{ featured_neighborhood.slug }}/">{{ chart.schema.plural_name|capfirst }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
-			{% endif %}
-		</div><!--/ #fn-publicrecords -->
-	</div><!--/ #featured-neighborhood -->
-	{% endif %}
-    {% endcomment %}
-
 
 	<div id="public-records">
 		{% if non_empty_date_charts %}
@@ -130,8 +85,7 @@
    and <a href="/accounts/register">register</a> if you feel like
    it. But be warned that we may reset the database at any time.</p>
    <p>We're <a href="http://blog.openblockproject.org">blogging about
-   our progress</a>.  For an idea of recent changes,
-   see <a href="http://developer.openblockproject.org/query?status=closed&component=obdemo&col=id&col=summary&col=status&col=type&col=milestone&col=component&col=changetime&report=11&desc=1&order=changetime">this report of recent demo fixes in our issue tracker</a>.
+   our progress</a>.
    </p>
 
    <p><a href="/disclaimer">Disclaimers</a>
