--- a/ebpub/ebpub/templates/db/city_list.html
+++ b/ebpub/ebpub/templates/db/city_list.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Streets{% endblock %}
+{% block title %}Cities{% endblock %}
 
 {% block content %}
 <div id="content">
-	<h1>Streets</h1>
+	<h1>Cities</h1>
 	<ul>
 	{% for city in city_list %}
 	<li><a href="{{ city.slug }}/">{{ city.name }}</a></li>
