Newsitem detail view: fix breakage when ni.location is not a point, and use the newsitemlocation table for faster lookup of related areas.

--- a/ebpub/ebpub/templates/db/newsitem_detail.html
+++ b/ebpub/ebpub/templates/db/newsitem_detail.html
@@ -20,7 +20,7 @@
 
 	<div id="mapwrapper">
 	  <script type="text/javascript">
-	    var map_center = new OpenLayers.LonLat({{newsitem.location.x}}, {{newsitem.location.y}});
+	    var map_center = new OpenLayers.LonLat({{map_center_x}}, {{map_center_y}});
 	    var map_zoom = 16;
 	    var newsitem = '{{newsitem.id}}';
 	  </script>
